corrected event listener on click and api call

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="assets/location.png" loading="lazy">
             <h3>Grant Location Access</h3>
             <p>Allow Access To Get Weather Information</p>
-            <button class="grant-access-btn">grant access</button>
+            <button class="grant-access-btn" type="button">grant access</button>
         </div>
 
         <div class="loading-container">
