JS logic completed everything is working fine

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div class="search-weather-container">
             <input type="text" name="search" id="search-bar" placeholder="Search for city..">
-            <button type="button"><img src="assets/search.png" alt=""></button>
+            <button type="button"><img src="assets/search.png" alt="" id="search-btn"></button>
         </div>
 
         <div class="weather-container">
