Added responsiveness to the app

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
     <div class="wrapper">
 
-        <h1>Weather app</h1>
+        <div class="container">
+
+            <h1>Weather app</h1>
 
         <div class="tab-container">
             <p class="tab" userWeather>Your Weather</p>
@@ -70,6 +72,8 @@
             <p>city not found</p>
         </div>
 
+
+        </div>
     </div>
 
     <script src="script.js"></script>
